After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 790914 - gdesktopappinfo: Downgrade a warning to a debug message
gdesktopappinfo: Downgrade a warning to a debug message
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
: 684690 792790 793739 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2017-11-27 18:50 UTC by Philip Withnall
Modified: 2018-02-23 14:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gdesktopappinfo: Downgrade a warning to a debug message (1.31 KB, patch)
2017-11-27 18:50 UTC, Philip Withnall
committed Details | Review

Description Philip Withnall 2017-11-27 18:50:07 UTC
Trivial patch attached. This fixes a failure in the appinfo unit test when run on a machine with very little installed, such as a build machine.
Comment 1 Philip Withnall 2017-11-27 18:50:12 UTC
Created attachment 364522 [details] [review]
gdesktopappinfo: Downgrade a warning to a debug message

Bug #786580 triggered this warning to show up in the appinfo tests if
run on a machine where no terminal except xterm is installed (for
example, a build machine). Since we didn’t warn before if xterm but no
other terminals were installed, it seems reasonable to downgrade the
warning to a debug message.

Signed-off-by: Philip Withnall <withnall@endlessm.com>
Comment 2 Emmanuele Bassi (:ebassi) 2017-11-28 12:47:46 UTC
Review of attachment 364522 [details] [review]:

Looks good
Comment 3 Philip Withnall 2017-11-28 14:13:54 UTC
Attachment 364522 [details] pushed as 181eb90 - gdesktopappinfo: Downgrade a warning to a debug message
Comment 4 Philip Withnall 2018-01-29 14:53:01 UTC
*** Bug 792790 has been marked as a duplicate of this bug. ***
Comment 5 Philip Withnall 2018-02-23 14:43:06 UTC
*** Bug 793739 has been marked as a duplicate of this bug. ***
Comment 6 Philip Withnall 2018-02-23 14:43:46 UTC
*** Bug 684690 has been marked as a duplicate of this bug. ***